# peaflist

./: .gitignore  dune-project  flake.nix  sqc.opam
.github/workflows/: ci.yml
lib/: ast.ml  ast.mli  dune  interpreter.ml  interpreter.mli  parser.ml  parser.mli  peasec.ml  peasec.mli  peasec2.ml  test.ml  typechecking.ml  typechecking.mli
lib/lang/: analyser_ctx.ml  analyser_ctx.mli  analyser_state.ml  analyser_state.mli  anf_ast.ml  ast.ml  ast.mli  constr_env.ml  constr_env.mli  constr_ident.ml  constr_ident.mli  convert_anf.ml  core.ml  core.mli  core_ast.ml  ctx.ml  ctx.mli  desugar.ml  desugared_ast.ml  dune  ident.ml  ident.mli  lang.ml  match_compile.ml  monotonic.ml  parsed_ast.ml  raw.ml  raw.mli  rename.ml  renamed_ast.ml  renamer.ml  renamer.mli  scheme.ml  scheme.mli  state.ml  state.mli  subst.ml  subst.mli  tau.ml  term_env.ml  (+14 more)
lib/mid/: anf.ml  dune
ppx/: dune  ppx_test.ml
test/: dune  example_programs.ml  test_sqc.ml
